Basic structure of the pages, with styling

--- a/src/app/components/feature-icon/feature-icon.component.scss
+++ b/src/app/components/feature-icon/feature-icon.component.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: var(--ion-text-color);
+  text-decoration: none;
+
   .icon-content {
     height: 90px;
     width: 90px;
