--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,7 +5,6 @@
 /** Background, text and stuff **/
 
 :root {
-
   --ion-font-family: 'Raleway', sans-serif;
 
   --ion-background-color: #f5f2e3;
@@ -100,4 +99,10 @@
   --ion-color-light-contrast-rgb: 0,0,0;
   --ion-color-light-shade: #d8d5c8;
   --ion-color-light-tint: #f6f3e6;
+
+
+  --passport-bg-color: #B4D8E3;
+  --island-bg-color: #B3E2B4;
+  --todo-bg-color: #FFC9D3;
+  --chores-bg-color: #FECFAC;
 }
