--- a/src/app/components/feature-icon/feature-icon.component.html
+++ b/src/app/components/feature-icon/feature-icon.component.html
@@ -1,6 +1,6 @@
-<div class="feature-icon">
+<a class="feature-icon" [routerLink]="route">
   <div class="icon-content" [ngStyle]="{'background-color': color}">
     <ion-img [src]="imageSrc"></ion-img>
   </div>
   <span class="feature-name">{{ label }}</span>
-</div>
+</a>
