--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,9 +11,9 @@
           <ion-col>
             <app-feature-icon label="Passport" icon="passport" [color]="utils.getCssVarValue('--passport-bg-color')" route="/passport"></app-feature-icon>
           </ion-col>
-          <ion-col>
+          <!-- <ion-col>
             <app-feature-icon label="Island" icon="island" [color]="utils.getCssVarValue('--island-bg-color')" route="/island"></app-feature-icon>
-          </ion-col>
+          </ion-col> -->
         </ion-row>
         <ion-row>
           <ion-col>
