--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -101,8 +101,8 @@
   --ion-color-light-tint: #f6f3e6;
 
 
-  --passport-bg-color: #B4D8E3;
-  --island-bg-color: #B3E2B4;
+  --passport-bg-color: #B3E2B4;
+  // --island-bg-color: #B4D8E3;
   --todo-bg-color: #FFC9D3;
   --chores-bg-color: #FECFAC;
 }
