--- a/src/app/pages/passport/passport.page.html
+++ b/src/app/pages/passport/passport.page.html
@@ -1,27 +1,35 @@
-<app-cool-header title="Passport" [color]="utils.getCssVarValue('--passport-bg-color')"></app-cool-header>
+<app-cool-header
+  title="Passport"
+  [color]="utils.getCssVarValue('--passport-bg-color')"
+  [showSaveButton]="dirty"
+  [saveFunction]="savePassport"
+></app-cool-header>
 
 <ion-content>
-  <div *ngIf="model">
+  <div class="player-info" *ngIf="model">
     <ion-item>
-      <ion-label position="stacked">Name</ion-label>
-      <ion-input maxlength="15" [(ngModel)]="model.name"></ion-input>
+      <ion-label position="fixed">Name</ion-label>
+      <ion-input maxlength="15" [(ngModel)]="model.name" (keyup)="setDirty()"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label position="stacked">Birthday</ion-label>
-      <ion-datetime displayFormat="DD/MM" pickerFormat="MMMM DD" placeholder="Select Date" [(ngModel)]="model.birthday"></ion-datetime>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="stacked">Title</ion-label>
+      <ion-label position="fixed">Title</ion-label>
       <ion-input maxlength="50" [(ngModel)]="model.title"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label position="stacked">Comment</ion-label>
+      <ion-label position="fixed">Comment</ion-label>
       <ion-input maxlength="50" [(ngModel)]="model.comment"></ion-input>
     </ion-item>
 
-    <ion-button expand="block" (click)="savePassport()">Save</ion-button>
+    <ion-item>
+      <ion-label position="fixed">Birthday</ion-label>
+      <ion-datetime
+        displayFormat="DD/MM"
+        pickerFormat="MMMM DD"
+        placeholder="Select Date"
+        [(ngModel)]="model.birthday"
+      ></ion-datetime>
+    </ion-item>
   </div>
 </ion-content>
