--- a/src/app/pages/passport/passport.page.html
+++ b/src/app/pages/passport/passport.page.html
@@ -65,3 +65,7 @@
     </ion-item>
   </div>
 </ion-content>
+
+<app-slide-drawer title="Island Villagers">
+  <p>ion-avatars of the villagers, plus a search box that allows me to select them</p>
+</app-slide-drawer>
