Autocapitalize input fields + layout tweaks

--- a/src/app/pages/passport/passport.page.html
+++ b/src/app/pages/passport/passport.page.html
@@ -13,17 +13,17 @@
 
     <ion-item>
       <ion-label position="fixed">Name</ion-label>
-      <ion-input maxlength="15" [(ngModel)]="model.name" (keyup)="setDirty()"></ion-input>
+      <ion-input autocapitalize="on" maxlength="15" [(ngModel)]="model.name" (keyup)="setDirty()"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="fixed">Title</ion-label>
-      <ion-input maxlength="50" [(ngModel)]="model.title"></ion-input>
+      <ion-input autocapitalize="on" maxlength="50" [(ngModel)]="model.title"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="fixed">Comment</ion-label>
-      <ion-input maxlength="50" [(ngModel)]="model.comment"></ion-input>
+      <ion-input autocapitalize="on" maxlength="50" [(ngModel)]="model.comment"></ion-input>
     </ion-item>
 
     <ion-item>
@@ -42,7 +42,7 @@
 
     <ion-item>
       <ion-label position="fixed">Island Name</ion-label>
-      <ion-input maxlength="15" [(ngModel)]="model.islandName" (keyup)="setDirty()"></ion-input>
+      <ion-input autocapitalize="on" maxlength="15" [(ngModel)]="model.islandName" (keyup)="setDirty()"></ion-input>
     </ion-item>
 
     <ion-item>
