--- a/src/app/pages/passport/passport.page.scss
+++ b/src/app/pages/passport/passport.page.scss
@@ -15,7 +15,8 @@ ion-item {
   --highlight-height: 0;
 }
 
-ion-input {
+ion-input, ion-select, ion-datetime {
+  width: 100%;
   background-color: var(--ion-color-medium);
   border-radius: 25px;
   --padding-start: 20px;
