--- a/src/app/pages/island/island.page.html
+++ b/src/app/pages/island/island.page.html
@@ -1,3 +1,76 @@
-<app-cool-header title="Island" [color]="utils.getCssVarValue('--island-bg-color')"></app-cool-header>
+<app-cool-header
+  title="Island Information"
+  [color]="utils.getCssVarValue('--island-bg-color')"
+  [showSaveButton]="dirty"
+  [saveFunction]="saveIsland"
+></app-cool-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <div class="passport-info" *ngIf="model">
+    <ion-list-header>
+      <ion-label>Resident Representative</ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label position="fixed">Name</ion-label>
+      <ion-input autocapitalize="on" maxlength="15" [(ngModel)]="model.residentRepresentative.name" (keyup)="setDirty()"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="fixed">Title</ion-label>
+      <ion-input autocapitalize="on" maxlength="50" [(ngModel)]="model.residentRepresentative.title" (keyup)="setDirty()"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="fixed">Comment</ion-label>
+      <ion-input autocapitalize="on" maxlength="50" [(ngModel)]="model.residentRepresentative.comment" (keyup)="setDirty()"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="fixed">Birthday</ion-label>
+      <ion-datetime
+        displayFormat="DD/MM"
+        pickerFormat="MMMM DD"
+        placeholder="Select Date"
+        [(ngModel)]="model.residentRepresentative.birthday"
+        (ionChange)="setDirty()"
+      ></ion-datetime>
+    </ion-item>
+  </div>
+
+  <div class="island-info" *ngIf="model">
+    <ion-img class="card-accent-icon" src="assets/icons/island.png"></ion-img>
+
+    <ion-list-header>
+      <ion-label>Island Information</ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label position="fixed">Island Name</ion-label>
+      <ion-input autocapitalize="on" maxlength="15" [(ngModel)]="model.name" (keyup)="setDirty()"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="fixed">Fruit</ion-label>
+      <ion-select placeholder="Select One" [(ngModel)]="model.fruit" (ionChange)="setDirty()">
+        <ion-select-option value="Oranges">🍊 Oranges</ion-select-option>
+        <ion-select-option value="Peaches">🍑 Peaches</ion-select-option>
+        <ion-select-option value="Apples">🍎 Apples</ion-select-option>
+        <ion-select-option value="Pears">🍐 Pears</ion-select-option>
+        <ion-select-option value="Cherries">🍒 Cherries</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="fixed">Hemisphere</ion-label>
+      <ion-select placeholder="Select One" [(ngModel)]="model.hemisphere" (ionChange)="setDirty()">
+        <ion-select-option value="Northern">Northern</ion-select-option>
+        <ion-select-option value="Southern">Southern</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </div>
+</ion-content>
+
+<app-slide-drawer title="Island Villagers">
+  <p>ion-avatars of the villagers, plus a search box that allows me to select them</p>
+</app-slide-drawer>
