--- a/src/app/components/feature-icon/feature-icon.component.html
+++ b/src/app/components/feature-icon/feature-icon.component.html
@@ -1,7 +1,6 @@
-<a class="feature-icon ion-activatable ripple-parent" [routerLink]="route">
+<a class="feature-icon">
   <div class="icon-content" [ngStyle]="{'background-color': color}">
     <ion-img [src]="imageSrc"></ion-img>
   </div>
   <span class="feature-name">{{ label }}</span>
-  <ion-ripple-effect type="unbounded"></ion-ripple-effect>
 </a>
