--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -100,7 +100,7 @@
   --ion-color-light-shade: #d8d5c8;
   --ion-color-light-tint: #f6f3e6;
 
-
+  --home-bg-color: #ECE0BA;
   --passport-bg-color: #B4D8E3;
   --island-bg-color: #B3E2B4;
   --todo-bg-color: #FFC9D3;
