--- a/src/app/pages/island/island.page.html
+++ b/src/app/pages/island/island.page.html
@@ -1,6 +1,6 @@
 <app-cool-header
   title="Island Information"
-  [color]="utils.getCssVarValue('--island-bg-color')"
+  [color]="utils.getCssVarValue('--ion-color-island')"
   [showSaveButton]="dirty"
   [saveFunction]="saveIsland"
 ></app-cool-header>
