Limit width of home screen

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,5 +1,9 @@
 ion-content {
   --background: url('/assets/images/polka-pattern.png');
+
+  .center-content {
+    max-width: 500px;
+  }
 }
 
 h1 {
