--- a/src/app/components/chore-checkbox/chore-checkbox.component.scss
+++ b/src/app/components/chore-checkbox/chore-checkbox.component.scss
@@ -1,4 +1,4 @@
-.feature-icon {
+.chore-checkbox {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,6 +8,7 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  margin-bottom: 20px;
 
   .icon-content {
     height: 90px;
@@ -17,11 +18,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--ion-color-step-100);
   }
 
-  .feature-name {
+  .chore-name {
     margin-top: 5px;
-    font-weight: 700;
     font-size: 14px;
+    text-align: center;
   }
 }
