--- a/src/app/pages/chores/chores.page.html
+++ b/src/app/pages/chores/chores.page.html
@@ -1,3 +1,34 @@
 <app-cool-header title="Daily Chores" [color]="utils.getCssVarValue('--ion-color-chores')"></app-cool-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <div class="center-content">
+    <div class="chores-card">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <app-chore-checkbox label="Villager DIY" icon="island"></app-chore-checkbox>
+          </ion-col>
+          <ion-col>
+            <app-chore-checkbox label="Message in a bottle" icon="island"></app-chore-checkbox>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <app-chore-checkbox label="Money Tree" icon="island"></app-chore-checkbox>
+          </ion-col>
+          <ion-col>
+            <app-chore-checkbox label="Money Rock" icon="island"></app-chore-checkbox>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <app-chore-checkbox label="Check in at Nook Stop" icon="island"></app-chore-checkbox>
+          </ion-col>
+          <ion-col>
+            <app-chore-checkbox label="Fossils (3-5)" icon="island"></app-chore-checkbox>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </div>
+</ion-content>
