Add new icons and draft checkbox functionality

--- a/src/app/pages/chores/chores.page.html
+++ b/src/app/pages/chores/chores.page.html
@@ -6,26 +6,24 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <app-chore-checkbox label="Villager DIY" icon="island"></app-chore-checkbox>
+            <app-chore-checkbox label="Villager DIY" icon="diy"></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Message in a bottle" icon="island"></app-chore-checkbox>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <app-chore-checkbox label="Money Tree" icon="island"></app-chore-checkbox>
+            <app-chore-checkbox label="Message in a bottle" icon="message-bottle"></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Money Rock" icon="island"></app-chore-checkbox>
+            <app-chore-checkbox label="Hit Rocks" icon="rocks"></app-chore-checkbox>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <app-chore-checkbox label="Check in at Nook Stop" icon="island"></app-chore-checkbox>
+            <app-chore-checkbox label="Money Tree" icon="money-tree"></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Fossils (3-5)" icon="island"></app-chore-checkbox>
+            <app-chore-checkbox label="Nook Miles+ Tasks" icon="nook-miles"></app-chore-checkbox>
+          </ion-col>
+          <ion-col>
+            <app-chore-checkbox label="Fossils (3-5)" icon="fossil"></app-chore-checkbox>
           </ion-col>
         </ion-row>
       </ion-grid>
