--- a/src/app/pages/chores/chores.page.html
+++ b/src/app/pages/chores/chores.page.html
@@ -6,24 +6,54 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <app-chore-checkbox label="Villager DIY" icon="diy"></app-chore-checkbox>
+            <app-chore-checkbox
+              label="Villager DIY"
+              icon="diy"
+              [state]="villagerDiyChore.complete"
+              (stateChange)="upsertChore(villagerDiyChore)"
+            ></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Message in a bottle" icon="message-bottle"></app-chore-checkbox>
+            <app-chore-checkbox
+              label="Message in a bottle"
+              icon="message-bottle"
+              [state]="messageInBottleChore.complete"
+              (stateChange)="upsertChore(messageInBottleChore)"
+            ></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Hit Rocks" icon="rocks"></app-chore-checkbox>
+            <app-chore-checkbox
+              label="Hit Rocks"
+              icon="rocks"
+              [state]="hitRocksChore.complete"
+              (stateChange)="upsertChore(hitRocksChore)"
+            ></app-chore-checkbox>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
-            <app-chore-checkbox label="Money Tree" icon="money-tree"></app-chore-checkbox>
+            <app-chore-checkbox
+              label="Money Tree"
+              icon="money-tree"
+              [state]="moneyTreeChore.complete"
+              (stateChange)="upsertChore(moneyTreeChore)"
+            ></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Nook Miles+ Tasks" icon="nook-miles"></app-chore-checkbox>
+            <app-chore-checkbox
+              label="Nook Miles+ Tasks"
+              icon="nook-miles"
+              [state]="nookMilesChore.complete"
+              (stateChange)="upsertChore(nookMilesChore)"
+            ></app-chore-checkbox>
           </ion-col>
           <ion-col>
-            <app-chore-checkbox label="Fossils (3-5)" icon="fossil"></app-chore-checkbox>
+            <app-chore-checkbox
+              label="Fossils (3-5)"
+              icon="fossil"
+              [state]="fossilsChore.complete"
+              (stateChange)="upsertChore(fossilsChore)"
+            ></app-chore-checkbox>
           </ion-col>
         </ion-row>
       </ion-grid>
