--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -47,5 +47,6 @@
         </ion-row>
       </ion-grid>
     </div>
+    <a class="about-link" [routerLink]="['/about']">About this app</a>
   </div>
 </ion-content>
