--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -46,3 +46,9 @@ h1 {
   color: var(--ion-text-color);
   opacity: 0;
 }
+
+.about-link {
+  color: var(--ion-text-color);
+  position: absolute;
+  bottom: 25px;
+}
