Add link to source code

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -30,8 +30,8 @@
 
     <div class="credits-centered">
       <p>
-        This app is Free Software and distributed under the
-        <a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-V3</a> license.
+        This is Free Software and distributed under the GPL-V3 license. You can check out the source code on
+        <a href="https://github.com/matfantinel/acnh-pocket-companion">GitHub</a>
       </p>
       <h4>Developed by <a href="https://fantinel.dev">Matheus Fantinel</a></h4>
     </div>
