Created Critterpedia page

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -12,6 +12,7 @@
         <ion-label class="ion-text-wrap">
           In-App Icons made by
           <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a>
+          , <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
           and <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from
           <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
         </ion-label>
